-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.320 2008-07-16 01:00:10 guru Exp $
-----------------------------------------------------------------------------------------
2005-07-15	pwessel
	* pslib.*:		Now measure paper size in double precision points instead
				of truncating to nearest integer.  To remain backwards
				compatible for pslib users we now initialize all plotting
				in GMT with ps_plotinit_hires.
	* gmt_*.c:		Now use double precision for paper size rather than int.
	
2005-06-20	pwessel
	* mgd77/mgd77.c:	Now applies recalculation of fields requested by E77 flags
				as part of reading netcdf mgd77+ files.  However, if the
				original anomaly was NaN then we leave it as is.

2005-06-13	pwessel
	* grdimage.c:	Failed to determine boundary of projected grid with enough precision.
	* misc/gmtstitch.c:	Check to see if format was set was wrong.
	* mgd77/mgd77track.c:	Missing newline after last source line
	
2005-06-12	pwessel
	* examples:		Added ex27 for plotting img files and ex28 for plotting UTM
	* psbasemap.c:		The syntax for the -L option had to change since one could
				not easily use the :label: specification if the coordinates
				were given in dd:mm[:ss] format.  A new syntax has been
				implemented where one or more +?[args] strings are appended
				after the required parameters.
	* pscoast.c:		Same.
	* gmt.h, gmt_init.c:	Modified special checks for FreeBSD by also considering _AMD64_

2005-06-11	pwessel
	* mgd77/mgd77sniffer.c:	Bitwise assignment error was deactivating other fields when
				depth field was missing from a cruise.  Another bitwise error
				was overwriting E77 nav flags when navigation was found on land
				Updated sample grid function to handle longitudes for img files
	* mgd77/mgd77.c:	Index array error resulting in wrong IGRF start and stop
				years was fixed.
2005-06-09	pwessel
	* xyz2grd.c:		For -E under Windows we used fscanf with a pointer from GMT DLL